--- a/hangman/index.html
+++ b/hangman/index.html
@@ -44,7 +44,7 @@
     <div class="popup-container" id="popup-container">
         <div class="popup">
             <h2 id="final-message"></h2>
-            <button id="play-button"></button>
+            <button id="play-button">Play Again</button>
         </div>
     </div>
 
@@ -52,6 +52,6 @@
     <div class="notification-container" id="notification-container">
         <p>You have already entered this letter</p>
     </div>
-
+    <script src="index.js"></script>
 </body>
 </html>
